--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin" :  { "dbtosb" : "./bin/dbtosb.js"  },
+  "dependencies": {
+    "yargs" : "^8.0.1"
+  },
   "author": "jasonlhy",
   "license": "ISC"
 }
