--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dbtosb",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Convert double byte width digit and english letter into single byte",
   "main": "app.js",
   "scripts": {
@@ -10,6 +10,11 @@
   "dependencies": {
     "yargs" : "^8.0.1"
   },
+  "keywords": [
+    "Chinese",
+    "全形",
+    "半形"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Jasonlhy/dbtosb.git"
